--- a/devtools/devtools.html
+++ b/devtools/devtools.html
@@ -11,7 +11,7 @@
       }
       #container {
         display: flex;
-        height: 400px;
+        height: 100%;
         overflow: hidden;
       }
       body {
@@ -26,9 +26,15 @@
         margin: 0;
         padding: 0;
       }
+      .drag {
+        height: 20px;
+        background-color: ghostwhite;
+        -webkit-app-region: drag;
+      }
     </style>
   </head>
   <body>
+    <div class="drag"></div>
     <div id="container"></div>
   </body>
 </html>
